Prevent wrapping the fuzzy checkbox with long translations.
svn path=/src/trunk/Pootle/; revision=15319

--- a/html/style.css
+++ b/html/style.css
@@ -1860,7 +1860,6 @@ div.translator-comments + #translate-suggestion-container
     left: 101%;
     position: absolute;
     margin: 0 5px;
-    min-width: 110px;
 }
 
 .translate-buttons-block[dir="rtl"]
@@ -1888,7 +1887,7 @@ div.translator-comments + #translate-suggestion-container
     color: #333;
     padding: 2px 5px 2px 23px;
     text-shadow: 1px 1px 0 #FFFFFF;
-    min-width: 100%;
+    min-width: 110px;
 }
 
 .translate-buttons-block[dir="rtl"] .submit,
@@ -1999,6 +1998,11 @@ div#prevnext[dir="rtl"] .next:active,
 div#prevnext[dir="rtl"] .next:focus
 {
     background-image: url('images/prev2.png');
+}
+
+.translate-fuzzy-block
+{
+    min-width: 150px;
 }
 
 .translate-fuzzy-block label
